# anda-bot

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  Makefile  README.md  README_cn.md  example.env  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: build-dockers.yml  chrome.yml  docsite.yml  release.yml  test.yml
anda-cli/: README.md  go.mod  go.sum  main.go
anda-cli/api/: client.go  types.go  types_test.go
anda-cli/cmd/: admin.go  conversations.go  cwt.go  cwt_test.go  execute_kip_readonly.go  formation.go  formation_batch.go  formation_test.go  info.go  keygen.go  maintenance.go  management.go  recall.go  root.go  status.go
anda-hippocampus-openclaw/: README.md  openclaw.plugin.json  package.json
anda-hippocampus-openclaw/src/: client.ts  index.ts  types.ts
anda_bot/: Cargo.toml  README.md
anda_bot/assets/: CompactionPrompt.md  SelfInstructions.md  SideInstructions.md  SupervisorInstructions.md  config.yaml  default.env  logo.icns
anda_bot/locales/: app.yml
anda_bot/src/: auto_update.rs  autostart.rs  brain.rs  channel.rs  cli.rs  config.rs  cron.rs  daemon.rs  engine.rs  gateway.rs  logger.rs  main.rs  transcription.rs  tts.rs  util.rs
anda_bot/src/brain/: brain.rs  client.rs  hippocampus.rs  runtime.rs
anda_bot/src/channel/: attachments.rs  discord.rs  irc.rs  lark.rs  runtime.rs  telegram.rs  tools.rs  types.rs  wechat.rs
anda_bot/src/cli/: agent.rs  channel.rs  session.rs  updater.rs  user.rs  voice.rs  voice_unsupported.rs
anda_bot/src/config/: channel.rs  mcp.rs  model.rs  transcription.rs  tts.rs  user.rs
anda_bot/src/cron/: runtime.rs  service.rs  store.rs  tools.rs  types.rs
anda_bot/src/engine/: action.rs  agent.rs  bookmark.rs  browser.rs  browser_ws.rs  conversation.rs  conversation_tool.rs  goal.rs  idle.rs  mcp_server.rs  model_retry.rs  multimodal.rs  prompt.rs  resources.rs  shell_runtime.rs  side.rs  skill_library.rs  system.rs
anda_bot/src/engine/agent/: instructions.rs  meta.rs  runner.rs  session.rs  startup.rs
anda_bot/src/engine/multimodal/: attachment.rs  catalog.rs  source.rs
anda_bot/src/gateway/: chat.rs  client.rs
anda_bot/src/identity/: ed25519.rs  files.rs  local_store.rs  mod.rs  refs.rs  secrets.rs  store.rs  tests.rs
anda_bot/src/transcription/: google.rs  groq.rs  local_whisper.rs  openai.rs  stepfun.rs
anda_bot/src/tts/: edge.rs  google.rs  openai.rs  stepfun.rs
anda_bot/src/tui/: action.rs  app.rs  input.rs  layout.rs  markdown.rs  mod.rs  render.rs  status.rs  terminal.rs  tests.rs  text.rs  theme.rs  transcript.rs  widgets.rs
anda_bot/src/util/: cose.rs  env.rs  file_uri.rs  http_client.rs  json_schema.rs  key.rs  request_meta.rs  text.rs  windows_process.rs
anda_hippocampus/: API.md  API_cn.md  Cargo.toml  Dockerfile  README.md  SKILL.md  WEBSITE.md  WEBSITE_cn.md  app.html
anda_hippocampus/assets/: HippocampusFormation.md  HippocampusMaintenance.md  HippocampusRecall.md  KIPSyntax.md  RecallFunctionDefinition.json
anda_hippocampus/src/: agents.rs  handler.rs  lib.rs  main.rs  model.rs  payload.rs  space.rs  types.rs
anda_hippocampus/src/agents/: formation.rs  maintenance.rs  recall.rs
chrome-extension/: .prettierrc  README.md  brain.html  config.html  dashboard.html  index.html  manifest.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
chrome-extension/chrome-store/: detailed-description.ar.edge.txt  detailed-description.ar.txt  detailed-description.en.edge.txt  detailed-description.en.txt  detailed-description.es.edge.txt  detailed-description.es.txt  detailed-description.fr.edge.txt  detailed-description.fr.txt  detailed-description.ru.edge.txt  detailed-description.ru.txt  detailed-description.zh_CN.edge.txt  detailed-description.zh_CN.txt  permissions.md
chrome-extension/public/: manifest.json
chrome-extension/scripts/: check-i18n.mjs
chrome-extension/src/: App.svelte  BrainApp.svelte  ConfigApp.svelte  DashboardApp.svelte  app.css  brain.ts  config.ts  dashboard.ts  main.ts  page_element_content.test.ts  page_element_content.ts  service_worker.test.ts  service_worker.ts  vite-env.d.ts
chrome-extension/src/lib/: i18n.test.ts  i18n.ts
deploy/: quick_start.md  quick_start_cn.md
deploy/systemd/: anda_hippocampus.service
docsite/: README.md  docusaurus.config.ts  package.json  sidebars.ts
docsite/docs/: intro.mdx
docsite/docs/memory/: brain.mdx  hippocampus.mdx
docsite/docs/quick-start/: browser-extension.mdx  install.mdx  terminal.mdx
docsite/docs/runtime/: channels.mdx  configuration.mdx
docsite/docs/workflows/: long-horizon.mdx
docsite/i18n/ar/: code.json
docsite/i18n/es/: code.json
docsite/i18n/fr/: code.json
docsite/i18n/ru/: code.json
docsite/i18n/zh-Hans/: code.json
docsite/src/css/: custom.css
docsite/src/pages/: index.module.css  index.tsx
posts/: AI_Memory_Must_Sleep.md  AI_Memory_Must_Sleep_CN.md  AI_Memory_Must_Sleep_cn.md  Claude_Code_Memory_Research.md  Claude_Code_Memory_Research_CN.md  Claude_Code_Memory_Research_cn.md  Company_Built_As_Intelligence.md  Company_Built_As_Intelligence_CN.md  Company_Built_As_Intelligence_cn.md  Enterprise_AI_Brain.md  Enterprise_AI_Brain_CN.md  Enterprise_AI_Brain_cn.md  LLM_Knowledge_Bases.md  LLM_Knowledge_Bases_cn.md  Tokens_Anda_Hippocampus.md  Tokens_Anda_Hippocampus_cn.md
scripts/: build-windows-installer.ps1  install.ps1  install.sh  publish-homebrew.sh
selected-skills/mineru-document-extractor/: SKILL.md
skills/auto-research/: SKILL.md
skills/claude-code/: SKILL.md
skills/codex/: SKILL.md
skills/deep-research/: SKILL.md
skills/doc-coauthoring/: SKILL.md
skills/docx/: SKILL.md
skills/docx/scripts/: accept_changes.py  comment.py
skills/git-assistant/: SKILL.md
skills/learn/: SKILL.md
skills/pptx/: editing.md
skills/skill-creator/: SKILL.md
skills/skill-creator/eval-viewer/: viewer.html
skills/skill-creator/references/: schemas.md
skills/skill-creator/scripts/: generate_report.py  (+5 more)
website/: PRD.md  README.md  components.json  package.json  svelte.config.js  wrangler.jsonc
website/src/: app.html
(+230 files in other folders)
