[workspace]
resolver = "2"
members = ["anda_bot"]

[workspace.package]
description = "🐼 Born of panda. Awakened as Anda. A copilot for your computer, powered by the ANDA Hippocampus."
repository = "https://github.com/ldclabs/anda-bot"
homepage = "https://github.com/ldclabs/anda-bot"
keywords = ["knowledge-graph", "persistent-memory", "cognitive", "kip", "agent"]
categories = [
  "accessibility",
  "web-programming",
  "development-tools",
  "text-processing",
]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = [
  "http1",
  "http2",
  "json",
  # "macros",
  "matched-path",
  "tokio",
  "query",
], default-features = true }
anda_core = { version = "0.12" }
anda_engine = { version = "0.12" }
anda_engine_server = { version = "0.12" }
anda_web3_client = { version = "0.12" }
anda_object_store = "0.3"
anda_db = { version = "0.7", features = ["full"] }
anda_db_tfs = { version = "0.5", features = ["full"] }
anda_cognitive_nexus = "0.7"
anda_hippocampus = { version = "0.5" }
anda_kip = "0.7"
base64 = "0.22"
cpal = { version = "0.17" }
ciborium = "0.2"
coset = "0.4"
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
] }
chrono-tz = "0.10"
cron = "0.16"
dotenv = "0.15"
futures = "0.3"
futures-util = "0.3"
http = "1.3"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde-saphyr = "0.0"
sha3 = "0.11"
sha2 = "0.10"
ic_cose_types = "0.9"
ic_cose = "0.9"
ic_auth_types = "0.8"
ic-ed25519 = "0.6"
infer2 = { version = "0.21" }
object_store = { version = "0.13" }
reqwest = { version = "0.13", features = [
  "rustls",
  "json",
  "gzip",
  "stream",
  "http2",
  "form",
  "multipart",
  # "hickory-dns",
], default-features = true }
tokio-util = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
structured-logger = "1"
log = { version = "0.4", features = ["kv_serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
tower-http = { version = "0.6", features = ["compression-gzip", "cors"] }
markdown = "1"
mimalloc = { version = "0.1", features = ["v3"] }
rand = "0.10"
prost = { version = "0.14", default-features = false, features = ["derive"] }
libc = "0.2"
ratatui = { version = "0.30", default-features = true }
crossterm = { version = "0.29", features = ["event-stream"] }
unicode-segmentation = "1"
unicode-width = "0.2"
tokio-rustls = "0.26"
webpki-roots = "1"
weixin-agent = "0.1"
zip = { version = "2", default-features = false, features = [
  "deflate-flate2",
  "flate2",
] }

[patch.crates-io]
ratatui = { git = "https://github.com/ldclabs/ratatui.git", branch = "main" }
weixin-agent = { git = "https://github.com/ldclabs/weixin-agent-sdk-rs.git", rev = "13f8c28b4a91962a9431e82f29fd89292e557ff1" }

[profile.release]
debug = false
lto = true
strip = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
