[package]
name = "anda_bot"
publish = false
version = "0.1.0"
description = "Just A Rather Very Intelligent Bot."
edition.workspace = true

[[bin]]
name = "anda"
path = "src/main.rs"

[dependencies]
anda_hippocampus = { path = "../anda_hippocampus", version = "0.4" }
async-trait = { workspace = true }
anda_core = { workspace = true }
anda_engine = { workspace = true, features = ["sandbox"] }
anda_engine_server = { workspace = true }
anda_web3_client = { workspace = true }
anda_db = { workspace = true }
anda_kip = { workspace = true }
anda_object_store = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
] }
chrono-tz = "0.10"
coset = { workspace = true }
cron = "0.16"
futures = { workspace = true }
futures-util = { workspace = true }
ic-ed25519 = { workspace = true }
ic_auth_types = { workspace = true }
ic_cose_types = { workspace = true }
parking_lot = { workspace = true }
tokio-util = { workspace = true }
structured-logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-saphyr = "0.0.24"
sha3 = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
http = { workspace = true }
object_store = { workspace = true, features = ["aws", "integration"] }
tower-http = { workspace = true }
mimalloc = { workspace = true }
rand = { workspace = true }
libc = "0.2"
# TUI (ratatui + crossterm)
ratatui = { version = "0.30", default-features = true }
crossterm = { version = "0.29", features = ["event-stream"] }
unicode-width = "0.2"
tokio-rustls = "0.26"
webpki-roots = "1"

[dev-dependencies]
tempfile = "3"
