[package]
name = "anda_bot"
publish = false
version = "0.4.4"
description = "Born of panda. Awakened as Anda. A copilot for your computer, powered by the ANDA Hippocampus."
edition.workspace = true

[[bin]]
name = "anda"
path = "src/main.rs"

[dependencies]
anda_hippocampus = { workspace = true }
async-trait = { workspace = true }
anda_core = { workspace = true }
anda_engine = { workspace = true }
anda_engine_server = { workspace = true }
anda_web3_client = { workspace = true }
anda_db = { workspace = true }
anda_kip = { workspace = true }
anda_object_store = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
coset = { workspace = true }
cron = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
ic-ed25519 = { workspace = true }
ic_auth_types = { workspace = true }
ic_cose_types = { workspace = true }
infer2 = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
structured-logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
sha3 = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
http = { workspace = true }
object_store = { workspace = true, features = ["aws", "integration"] }
tower-http = { workspace = true }
mimalloc = { workspace = true }
rand = { workspace = true }
libc = { workspace = true }
# TUI (ratatui + crossterm)
ratatui = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
weixin-agent = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
cpal = { workspace = true }

[dev-dependencies]
tempfile = "3"
