[package]
name = "anda_bot"
publish = false
version = "0.9.5"
description = "Born of panda. Awakened as Anda. A copilot for your computer, powered by the ANDA Brain."
edition.workspace = true

[package.metadata.i18n]
available-locales = ["en", "zh-Hans"]
default-locale = "en"
load-path = "locales"

[[bin]]
name = "anda"
path = "src/main.rs"

[[bin]]
name = "anda_launcher"
path = "src/bin/anda_launcher.rs"

[dependencies]
anda_brain = { workspace = true }
async-trait = { workspace = true }
anda_core = { workspace = true }
anda_engine = { workspace = true }
anda_engine_server = { workspace = true }
anda_web3_client = { workspace = true }
anda_db = { workspace = true }
anda_db_tfs = { workspace = true }
anda_db_utils = { workspace = true }
anda_kip = { workspace = true }
anda_object_store = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
chrono-tz = { workspace = true }
coset = { workspace = true }
cron = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
ic-ed25519 = { workspace = true }
ic_auth_types = { workspace = true }
ic_cose_types = { workspace = true }
infer2 = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
rust-i18n = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
structured-logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
sha3 = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
object_store = { workspace = true, features = ["aws", "integration"] }
tower-http = { workspace = true }
mimalloc = { workspace = true }
rand = { workspace = true }
libc = { workspace = true }
# TUI (ratatui + crossterm)
ratatui = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
markdown = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
weixin-agent = { workspace = true }
zip = { workspace = true }

[target.'cfg(any(target_env = "musl", target_os = "windows"))'.dependencies]
liteparse = { workspace = true }

[target.'cfg(all(not(target_env = "musl"), not(target_os = "windows")))'.dependencies]
liteparse = { workspace = true, features = ["tesseract"] }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
cpal = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-foundation = { workspace = true, features = [
  "NSData",
  "NSObject",
  "NSNotification",
  "NSString",
  "objc2-core-foundation",
] }
objc2-app-kit = { workspace = true, features = [
  "NSImage",
  "NSAlert",
  "NSApplication",
  "NSButton",
  "NSControl",
  "NSMenu",
  "NSMenuItem",
  "NSResponder",
  "NSRunningApplication",
  "NSStatusBar",
  "NSStatusBarButton",
  "NSStatusItem",
  "NSView",
  "objc2-core-foundation",
] }

[target.'cfg(windows)'.dependencies]
liteparse-pdfium-sys = { workspace = true }
png = { workspace = true }
windows-sys = { workspace = true, features = [
  "Win32_Globalization",
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"
