[package]
name = "anda_hippocampus"
publish = false
version = "0.2.2"
description.workspace = true
edition.workspace = true

[dependencies]
anda_core = { workspace = true }
anda_engine = { workspace = true }
anda_db = { workspace = true }
anda_kip = { workspace = true }
anda_cognitive_nexus = { workspace = true }
anda_object_store = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
ciborium = { workspace = true }
dotenv = { workspace = true }
ic_auth_types = { workspace = true }
ic_cose_types = { workspace = true }
ic_cose = { workspace = true }
tokio-util = { workspace = true }
structured-logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
http = { workspace = true }
object_store = { workspace = true, features = ["aws", "integration"] }
tower-http = { workspace = true }
markdown = "1.0.0"

[dev-dependencies]
